fixed new experience section on mobile

--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ nav .fa-solid{
     top: 8vh;
     left: 0.75vw;
     color: #B7C5D3;
-    line-height: 2;
+    line-height: 1.5;
 }
 #desc-display ul li::marker{
     color: #82FFD8;
@@ -857,6 +857,7 @@ nav .fa-solid{
         color: #b7c5d3;
         padding-inline: 20px;
         word-wrap: break-word;
+        padding-bottom: 40vh;
     }
     .exp-title p1{
         font-size: 50px;
@@ -887,20 +888,79 @@ nav .fa-solid{
         top: 10vh;
         left: 0vw;
     }
-    .company1{
+    .exp-box{
+        position: relative;
+        top: 10vh;
+        left: 20vw;
+    }
+    .companies a{
         text-decoration: none;
         font-size: 12px;
         color: #b7c5d3;
         border: 2px solid #2F4858;
-        border-left: 2px solid #82FFD8;
         border-radius: 5px;
         padding: 5px 10px;
         font-size: 18px;
         cursor: pointer;
     }
-    .company1:hover{
+    .companies a:hover{
         background: #2F4858;
+        border-left: 2px solid #82FFD8;
         transition: 1s;
+    }
+    #exp-container{
+        position: absolute;
+        display: inline-block;
+        top: 35vh;
+        left: 5vw;
+        height: 100%;
+        width: 100%;
+    }
+    #company-display{
+        position: absolute;
+        display: inline-flex;
+        inline-size: 90%;
+        top: 6vh;
+        color: #82FFD8;
+    }
+    #company-display a:after{
+        content: '';
+        width: 0%;
+        height: 2px;
+        background: #82FFD8;
+        display: block;
+        margin: auto;
+        position: absolute;
+    }
+    #company-display a:hover:after{
+        content: '';
+        width: 25%;
+        height: 2px;
+        background: #82FFD8;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+        transform: scaleX(1);
+        transform-origin: bottom left;
+    }
+    #dates-display{
+        position: absolute;
+        display: inline-flex;
+        top: 9vh;
+        left: 0vw;
+        color: #B7C5D3;
+    }
+    #desc-display{
+        position: absolute;
+        display: inline-flex;
+        inline-size: 80%;
+        top: 12vh;
+        left: 4vw;
+        color: #B7C5D3;
+        line-height: 1.5;
+    }
+    #desc-display ul li::marker{
+        color: #82FFD8;
     }
 
     /*Projects*/
